<resources>
    <string name="app_name">Github User (UI &amp; UX dan API)</string>

    <string name="username">Username</string>
    <string name="id">Id</string>
    <string name="search">Search</string>
    <string name="search_usr">Search user</string>
    <string name="search_usr_name">Search username</string>
    <string name="search_usr_home">Aplikasi Github User Submision 3 BFAA </string>
    <string name="setting">Setting</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="repository">Repository</string>
    <string name="no_user">No User Found</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Followings</string>
    <string name="menu_language">Language</string>
    <string name="title_buat_navigation_drawer">MainNavigationDrawerActivity</string>
    <string name="navigation_open">Open navigation </string>
    <string name="navigation_close">Close navigation </string>
    <string name="nav_title">GithubUserUIUXApps</string>
    <string name="nav_desc">Navigation head</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="key_reminder">key_reminder</string>
    <string name="title_reminder">Reminder at 12.00 AM</string>
    <string name="switch_off">Reminder not set</string>
    <string name="switch_on">Reminder is set</string>

</resources>