<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_user_detail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="105dp"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="157dp"
            android:src="@color/teal_200" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </TableLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tx_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="373dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_marginEnd="12dp"
                    android:text="@string/repository"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginEnd="12dp"
                    android:text="@string/followers"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginEnd="12dp"
                    android:text="@string/followings"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tx_repo"
                    android:layout_marginEnd="12dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tx_follower"
                    android:layout_marginEnd="12dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tx_following"
                    android:layout_marginEnd="12dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detail_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:layout_marginTop="16dp"
        app:tabTextColor="@color/white"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/detail_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_anchor="@id/detail_view_pager"
            app:layout_anchorGravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/design_default_color_secondary"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>